Added basic sound file fetching functionality

--- a/index.html
+++ b/index.html
@@ -8,18 +8,10 @@
 
 <body>
   <div class="background-img"></div>
-  <div class="button-container">
-  <div class="sound">
-<P>1</P>
-  </div>
-  <div class="sound">
-<P>2</P>
-  </div>
-  <div class="sound">
-<P>3</P>
-  </div>
-</div>
-<script src="main.js"></script>
-</body>
+  <div class="button-container" id="container">
 
+</div>
+</body>
+<script></script>
+<script>require("./js/module_dataFetch.js")</script>
 </html>
