Added progress bar and pause functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
   <div class="background-img"></div>
   <div class="button-container" id="container">
-
 </div>
 </body>
 <script></script>
-<script>require("./js/module_dataFetch.js")</script>
+<script>require("./js/script.js")</script>
 </html>
